For using MHCflurry

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,6 +1,7 @@
 # Build with: docker build -f docker/Dockerfile .
 
-FROM --platform=linux/amd64 ubuntu:22.04
+# ✅ Change base image to CUDA runtime for GPU
+FROM --platform=linux/amd64 nvidia/cuda:12.2.2-cudnn8-devel-ubuntu22.04
 
 MAINTAINER Julia Kodysh <julia326@gmail.com>
 
@@ -45,8 +46,7 @@ ENV SHELL=/bin/bash
 ENV USER=user
 WORKDIR /home/user
 
-# Install the Perl vcftools
-# Original address for vcftools: https://kent.dl.sourceforge.net/project/vcftools/vcftools_0.1.13.tar.gz
+# Install vcftools (same as before)
 RUN cd /tmp && wget https://github.com/openvax/neoantigen-vaccine-pipeline/releases/download/0.3.0/vcftools_0.1.13.tar.gz && \
     tar xvfz vcftools_0.1.13.tar.gz && cd vcftools_0.1.13/ && make && \
     sudo cp -r /tmp/vcftools_0.1.13/bin/* /usr/local/bin && \
@@ -64,13 +64,15 @@ ENV PGV_BIN /home/user/miniconda/envs/pgv/bin
 ENV JAVA7_BIN /home/user/miniconda/envs/java7/bin
 
 # Switch to a faster solver for conda
-RUN conda update -n base conda && conda install -n base conda-libmamba-solver && \
+
+RUN conda config --set always_yes yes --set changeps1 no && \
+    conda tos accept --override-channels --channel https://repo.anaconda.com/pkgs/main && \
+    conda tos accept --override-channels --channel https://repo.anaconda.com/pkgs/r && \
+    conda update -n base conda && \
+    conda install -n base conda-libmamba-solver && \
     conda config --set solver libmamba
 
-# install a bunch of bfx tools; gatk needs to be this version, latest doesn't work
-# graphviz needed for DAG visualization
-# ucsc-liftover for converting coverage bed files between various alignments
-# java version specific to MuTect
+# install tools in pgv environment (same as before)
 RUN conda config --add channels r && \
     conda config --add channels defaults && \
     conda config --add channels conda-forge && \
@@ -92,57 +94,55 @@ RUN conda config --add channels r && \
     vcftools==0.1.15 \
     && conda clean --all -y
 
-# We also setup a newer environment with mhcflurry.
+# mhcflurry env (same)
 RUN conda config --add channels r && \
     conda config --add channels defaults && \
     conda config --add channels conda-forge && \
     conda config --add channels bioconda && \
     conda create -n mhcflurry \
-    python=3.7 \
+    python=3.10 \
     setuptools \
     cython \
     pip \
     && conda clean --all -y
 
-# MuTect needs Java 1.7, while GATK and other things need Java 1.8.
-# Dealing with this by setting up a separate Conda environment, specifically for Java 7
+# java7 env (same)
 RUN conda create -n java7 \
     java-jdk==7.0.91 \
     && conda clean --all -y
 
-# Set up MuTect 1.1.7
+# MuTect & GATK setup (same)
 RUN wget -O $HOME/mutect-1.1.7.jar http://storage.googleapis.com/common-files/tools/mutect-1.1.7.jar
 ENV MUTECT $HOME/mutect-1.1.7.jar
-
-# Set up GATK 3.7; need to link with gatk-register
 RUN wget -O $HOME/GenomeAnalysisTK.jar http://storage.googleapis.com/common-files/tools/GenomeAnalysisTK.jar
 RUN $PGV_BIN/gatk-register $HOME/GenomeAnalysisTK.jar
 
-# Copy and install Vaxrank and other python dependencies; they won't change very often,
-# so we want to do this before any further COPY commands in this Dockerfile.
-# See https://docs.docker.com/develop/develop-images/dockerfile_best-practices/#add-or-copy
+# ✅ Install GPU TensorFlow instead of CPU
 COPY requirements.txt $HOME
 ENV MHCFLURRY_BIN /home/user/miniconda/envs/mhcflurry/bin
-RUN $MHCFLURRY_BIN/pip install --ignore-installed -r $HOME/requirements.txt
-RUN $MHCFLURRY_BIN/mhcflurry-downloads fetch
 
-# Test MHCflurry
+# Upgrade pip, setuptools, and wheel first
+RUN $MHCFLURRY_BIN/pip install --upgrade pip setuptools wheel
+
+# Install all requirements (remove --ignore-installed)
+RUN $MHCFLURRY_BIN/pip install -r $HOME/requirements.txt
+
+# mhcflurry downloads and test
+RUN $MHCFLURRY_BIN/mhcflurry-downloads fetch
 RUN $MHCFLURRY_BIN/mhcflurry-predict --alleles HLA-A0201 --peptides SIINFEKL
 
-# most of the tools we're using are in the pgv environment; adding to PATH for convenience
+# Path setup
 ENV PATH $MHCFLURRY_BIN:$PGV_BIN:$PATH
 
-# Vaxrank-required env variables and setup
+# Vaxrank & snakemake setup (same)
 ENV KERAS_BACKEND tensorflow
 ENV PYENSEMBL_CACHE_DIR /reference-genome/pyensembl-cache
 ENV VAXRANK_REF_PEPTIDES_DIR /reference-genome/reference-peptides
-# this is needed for Vaxrank reports to be reasonably formatted, otherwise kerning is off
 RUN curl https://pastebin.com/raw/AmfYN3er > $HOME/.fonts.conf
 
-# Copy the current directory contents into the container
 COPY . $HOME
 
-# Strelka setup
+# Strelka setup (same)
 RUN wget https://github.com/Illumina/strelka/releases/download/v2.9.10/strelka-2.9.10.centos6_x86_64.tar.bz2 \
     && tar -xvf strelka-2.9.10.centos6_x86_64.tar.bz2 \
     && mv strelka-2.9.10.centos6_x86_64 $HOME/strelka \
@@ -150,16 +150,11 @@ RUN wget https://github.com/Illumina/strelka/releases/download/v2.9.10/strelka-2
 
 ENV STRELKA_CONFIG $HOME/pipeline/strelka_config.txt
 ENV STRELKA_BIN $HOME/strelka/bin
-
-# Python scripts setup, for things that are too small/simple to be their own modules
 ENV SCRIPTS $HOME/pipeline/scripts
 
-# snakemake logs get written here (hidden dir)
 RUN mkdir -p $HOME/.snakemake && sudo chown -R $USER $HOME/.snakemake
+RUN sed -i "/^\s*except requests\.exceptions\.ConnectionError as e:/s/except requests\.exceptions\.ConnectionError as e:/except Exception as e:/g" $($MHCFLURRY_BIN/python -c "import site; print(site.getsitepackages()[0])")/vaxrank/report.py
 
-# Hack to patch broken vaxrank after WUSTL server change.
-# This can be removed once vaxrank is fixed (and we update this image to latest vaxrank).
-# Replace specific exception handling with a generic "except Exception as e:" in report.py
-RUN sed -i '/^\s*except requests\.exceptions\.ConnectionError as e:/s/except requests\.exceptions\.ConnectionError as e:/except Exception as e:/g' /home/user/miniconda/envs/mhcflurry/lib/python3.7/site-packages/vaxrank/report.py
 
 ENTRYPOINT ["python", "run_snakemake.py"]
+
