--- a/requirements.txt
+++ b/requirements.txt
@@ -7,9 +7,10 @@ pyyaml
 snakemake==5.4.4
 varcode==1.2.1
 vaxrank==1.4.0
-tensorflow-cpu<=2.3.0
+tensorflow==2.15.0
 mhcflurry
 numpy
 pandas
 ipdb
 jinja2==3.0.3
+pynvml
